fixed leaderboard overflow

--- a/stemclient/src/App.css
+++ b/stemclient/src/App.css
@@ -7,6 +7,8 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  overflow: auto;
+  flex-grow: 1;
 }
 
 .app-login {
@@ -24,6 +26,7 @@
   width: 100%;
   min-height: auto;
   transition: all 0.2s;
+  flex-grow: 1;
 }
 
 .app .content-container {
@@ -35,7 +38,6 @@
   height: 100%;
   transition: all 0.2s;
   box-shadow: 0 0 10px rgba(24,24,24,0.5);
-  overflow: auto;
   z-index: 1;
 }
 
@@ -69,10 +71,6 @@
 
   .app .content-container-open {
     display: none;
-  }
-
-  .app .content-container {
-    z-index: -1;
   }
 }
 
