--- a/stemclient/src/styles/rolesPage.css
+++ b/stemclient/src/styles/rolesPage.css
@@ -52,7 +52,6 @@
     width: 100%;
     height: 80%;
     gap: 1rem;
-    overflow: auto;
 }
 
 .content .div {
@@ -77,8 +76,10 @@
     justify-content: center;
 }
 
-.content .leaderboard .board {
-    overflow: auto;
+.content .leaderboard {
+    overflow-y: auto;
+    flex-grow: 1;
+    z-index: 10;
 }
 
 .content .leaderboard .board .user-board {
@@ -122,7 +123,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: auto;
+    overflow-y: auto;
+    flex-grow: 1;
 }
 
 .content .rewards .reward {
